Refactor WebSocket event handling and authentication
- Update TokenChannelInterceptor to use getFirst() for authorization header retrieval
- Modify WebSocketConfiguration to enable user destinations and update broker settings
- Change DefaultWebSocketEventPublisher to use convertAndSendToUser for event publishing
- Update TransactionEventPublisher to publish events to the topic instead of WebSocket
- Refactor invitation handling in DefaultInvitationService to use InvitationSummary
- Adjust application logging levels for improved clarity